syntax = "proto3";

package pb;
option go_package = "github.com/theraffle/pb";

// -----------------User Service--------------------

service UserService {
  rpc CreateUser (CreateUserRequest) returns (LoginUserResponse) {}
  rpc GetUser (GetUserRequest) returns (GetUserResponse) {}
  rpc GetUserWallet (GetUserWalletRequest) returns (GetUserWalletResponse) {}
  rpc GetUserProject (GetUserProjectRequest) returns (GetUserProjectResponse) {}
  rpc UpdateUser (UpdateUserRequest) returns (GetUserResponse) {}
  rpc CreateUserWallet (CreateUserWalletRequest) returns (Empty) {}
  rpc CreateUserProject (CreateUserProjectRequest) returns (Empty) {}
  rpc LoginUser (LoginUserRequest) returns (LoginUserResponse) {}
  rpc LogoutUser (LogoutUserRequest) returns (Empty) {}
}

message CreateUserRequest {
  string userID = 1;
  LoginType loginType = 2;
}

message GetUserRequest {
  int64 userID = 1;
}

message GetUserResponse {
  int64 userID = 1;
  LoginType loginType = 2;
  string telegramID = 3;
  string discordID = 4;
  string twitterID = 5;
}

message UpdateUserRequest {
  int64 userID = 1;
  string telegramID = 2;
  string discordID = 3;
  string twitterID = 4;
}

message UserWallet{
  int64 userID = 1;
  int64 chainID = 2;
  string address = 3;
}

message CreateUserWalletRequest {
  UserWallet wallet = 1;
}

message GetUserWalletRequest {
  int64 userID = 1;
}

message GetUserWalletResponse {
  repeated UserWallet wallets = 1;
}

message CreateUserProjectRequest {
  int64 userID = 1;
  int64 projectID = 2;
  int64 chainID = 3;
  string address = 4;
}

message GetUserProjectRequest {
  int64 userID = 1;
}

message GetUserProjectResponse {
  repeated int64 projects = 1;
}

message LoginUserRequest {
  string userID = 1;
  LoginType loginType = 2;
}

message LoginUserResponse {
  int64 userID = 1;
}

message LogoutUserRequest {
  int64 userID = 1;
}

message Empty {}

enum LoginType {
  DISCORD = 0;
  TELEGRAM = 1;
  TWITTER = 2;
}